--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
-
+{% include header.html %}
 
 <header id="begin">
 	<time datetime="{{ entry.date }}" id="top_time">{{ page.date | date: "%B %d, %Y" }}</time>
