--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             </div>   
    
             <div class="span4 pull-right social-icons">
-<a href="/sitemap/"><i class="icon-sitemap"></i></a><a href="https://plus.google.com/u/0/105951994557667533128/posts"><i class="icon-google-plus"></i></a>
+<a href="/sitemap.html"><i class="icon-sitemap"></i></a><a href="https://plus.google.com/u/0/105951994557667533128/posts"><i class="icon-google-plus"></i></a>
 <a href="https://www.facebook.com/bkhubbard" target="_blank"><i class="icon-facebook"></i></a>
 <a href="https://github.com/bhubbard" target="_blank"><i class="icon-github"></i></a>
 <a href="https://twitter.com/bhubbard" target="_blank"><i class="icon-twitter"></i></a>
