--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,20 @@
 
 		<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" > 
 		<link rel="openid2.local_id" href="http://www.google.com/profiles/bkhubbard" > 
+		
+		<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+		
+		<link rel="author" href="https://plus.google.com/105951994557667533128"/>
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@bhubbard">
+		<meta name="twitter:creator" content="@http://www.twitter.com/bhubbard">
+		<meta property='og:locale' content='en_us'/>
+		<meta property='og:title' content='Brandon Hubbard | Los Angeles based Web Developer'/>
+		<meta property='og:description' content='Meet Brandon Hubbard, Web Developer of imFORZA.'/>
+		<meta property='og:url' content='http://brandonhubbard.com/'/>
+		<meta property='og:site_name' content='BrandonHubbard.com'/>
+		<meta property='og:type' content=''/>
+		<meta property='og:image' content=''/>
 
 		<link rel="shortcut icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
 		<link rel="apple-touch-icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16">
@@ -17,8 +31,12 @@
 		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css">
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
-		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
+		
 		<link href="/assets/css/custom.css" rel="stylesheet" />
+		
+		<!--[if lt IE 7]>
+		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
+		<![endif]-->
 		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script>
@@ -33,11 +51,11 @@
 
 
 <div class="container">
-<div class="row">
+<div class="row-fluid">
 <div class="span8 offset2">
 
 <h1 id="logo">
-			<a href="/"><img alt='' src="http://0.gravatar.com/avatar/003c2f987c508f5f7650070c72f81c3b?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Favatar%2Fad516503a11cd5ca435acc9bb6523536%3Fs%3D100&amp;r=G" class="avatar" height="100" width="100" /></a>
+			<a href="/"><img alt='' src="//0.gravatar.com/avatar/003c2f987c508f5f7650070c72f81c3b?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Favatar%2Fad516503a11cd5ca435acc9bb6523536%3Fs%3D100&amp;r=G" class="avatar" height="100" width="100" /></a>
 	<a href="/"><div class="brandon">BRANDON</div><div class="hubbard">HUBBARD</div></a>
 	<div class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</a></h1>
 
@@ -53,6 +71,6 @@
 <br />
 
 <div class="container">
-<div class="row">
+<div class="row-fluid">
 
 <div class="span8 offset2">
