--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
   
   <div class="row">
             <div class="span4 offset2 copyright">
-                <p class="pull-left">Copyright &copy; 2013 All rights reserved. </p>
+                <p class="pull-left">Copyright &copy; 2013 All rights reserved. <a href="/feed/">Subscribe via RSS</a> </p>
             </div>   
    
             <div class="span4 pull-right social-icons">
