--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Brandon Hubbard is a Los Angeles Based Web Developer currently building website for imFORZA." />
+		<meta name="keywords" content="david winter, tech, technology, ubuntu, linux, programming, internet, web development, php, java" />
+		<meta name="author" content="Brandon Hubbard" />
 
 		<link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom Feed">
 
@@ -26,7 +30,7 @@
 		<link rel="apple-touch-icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16">
 		<meta name="msapplication-TileImage" content="http://www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16"/>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		
 		
 		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css">
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
@@ -41,10 +45,10 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script>
 
-		<title>{% if page.title %} {{ page.title }} | {% endif %} BrandonHubbard</title>
+		<title>{% if page.title %} {{ page.title }} - {% endif %} BrandonHubbard.com</title>
 	</head>
 
-	<body>
+<body>
 
 
 <div class="container">
@@ -54,7 +58,7 @@
 <h2 class="brand" id="logo">
 			<a href="/"><img alt='' src="//0.gravatar.com/avatar/003c2f987c508f5f7650070c72f81c3b?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Favatar%2Fad516503a11cd5ca435acc9bb6523536%3Fs%3D100&amp;r=G" class="avatar" height="100" width="100" />
 	<div class="brandon">BRANDON</div><div class="hubbard">HUBBARD</div></a>
-	<div class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</a></h2>
+	<div class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</div></a></h2>
 
 <br />
 
