--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
 
 <body>
 
-
+<header>
 <div class="container">
 <div class="row-fluid">
 <div class="span8 offset2">
@@ -65,8 +65,9 @@
 </div>
 </div><!-- end row -->
 </div>
+</header>
 
-
+<section>
   <div id="wrap">
       <div id="main">
 <br />
