--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,7 +58,7 @@
 <h2 class="brand" id="logo">
 			<a href="/"><img alt='' src="//0.gravatar.com/avatar/003c2f987c508f5f7650070c72f81c3b?s=100&amp;d=http%3A%2F%2F0.gravatar.com%2Favatar%2Fad516503a11cd5ca435acc9bb6523536%3Fs%3D100&amp;r=G" class="avatar" height="100" width="100" />
 	<div class="brandon">BRANDON</div><div class="hubbard">HUBBARD</div></a>
-	<div class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</div></a></h2>
+	<div class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</div></h2>
 
 <br />
 
