--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset='utf-8'>
+		<meta charset='utf-8' />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Brandon Hubbard is a Los Angeles Based Web Developer currently building website for imFORZA." />
 		<meta name="keywords" content="david winter, tech, technology, ubuntu, linux, programming, internet, web development, php, java" />
@@ -9,22 +9,22 @@
 
 		<link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom Feed">
 
-		<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" > 
-		<link rel="openid2.local_id" href="http://www.google.com/profiles/bkhubbard" > 
+		<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" /> 
+		<link rel="openid2.local_id" href="http://www.google.com/profiles/bkhubbard" /> 
 		
 		<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 		
-		<link rel="author" href="https://plus.google.com/105951994557667533128"/>
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="@bhubbard">
-		<meta name="twitter:creator" content="@http://www.twitter.com/bhubbard">
-		<meta property='og:locale' content='en_us'/>
-		<meta property='og:title' content='Brandon Hubbard | Los Angeles based Web Developer'/>
-		<meta property='og:description' content='Meet Brandon Hubbard, Web Developer of imFORZA.'/>
-		<meta property='og:url' content='http://brandonhubbard.com/'/>
-		<meta property='og:site_name' content='BrandonHubbard.com'/>
-		<meta property='og:type' content=''/>
-		<meta property='og:image' content=''/>
+		<link rel="author" href="https://plus.google.com/105951994557667533128" />
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@bhubbard" />
+		<meta name="twitter:creator" content="@http://www.twitter.com/bhubbard" />
+		<meta property='og:locale' content='en_us' />
+		<meta property='og:title' content='Brandon Hubbard | Los Angeles based Web Developer' />
+		<meta property='og:description' content='Meet Brandon Hubbard, Web Developer of imFORZA.' />
+		<meta property='og:url' content='http://brandonhubbard.com/' />
+		<meta property='og:site_name' content='BrandonHubbard.com' />
+		<meta property='og:type' content=''/ >
+		<meta property='og:image' content='' />
 
 		<link rel="shortcut icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
 		<link rel="apple-touch-icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16">
