more tag cleanup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,18 +23,18 @@
 		<meta property='og:description' content='Meet Brandon Hubbard, Web Developer of imFORZA.' />
 		<meta property='og:url' content='http://brandonhubbard.com/' />
 		<meta property='og:site_name' content='BrandonHubbard.com' />
-		<meta property='og:type' content=''/ >
+		<meta property='og:type' content='' />
 		<meta property='og:image' content='' />
 
 		<link rel="shortcut icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
-		<link rel="apple-touch-icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16">
-		<meta name="msapplication-TileImage" content="http://www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16"/>
+		<link rel="apple-touch-icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
+		<meta name="msapplication-TileImage" content="http://www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
 
 		
 		
-		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css">
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
-		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
+		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css"/>
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
 		
 		<link href="/assets/css/custom.css" rel="stylesheet" />
 		
