--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="david winter, tech, technology, ubuntu, linux, programming, internet, web development, php, java" />
 		<meta name="author" content="Brandon Hubbard" />
 
-		<link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom Feed">
+		<link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom Feed" />
 
 		<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" /> 
 		<link rel="openid2.local_id" href="http://www.google.com/profiles/bkhubbard" /> 
