--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 		<meta charset='utf-8' />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Brandon Hubbard is a Los Angeles Based Web Developer currently building website for imFORZA." />
-		<meta name="keywords" content="david winter, tech, technology, ubuntu, linux, programming, internet, web development, php, java" />
+		<meta name="keywords" content="brandon hubbard, tech, media temple, imforza, mountain high, wordpress, coder" />
 		<meta name="author" content="Brandon Hubbard" />
 
 		<link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom Feed" />
