more design changes.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,8 @@
 {% include header.html %}
 
 <article class="post">
-	<h2 class="entry-title"><a class="no-link" href="#">{{ page.title }}</a></h2>
+
+	<h2 class="page-header">{{ page.title }}</h2>
 
 	{{ content }}
 </article>
