--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,7 +58,7 @@
 <h2 class="brand" id="logo">
 			<a href="/"><img alt='' src="///www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86.png" class="avatar" height="100" width="100" />
 	<span class="brandon">BRANDON</span><span class="hubbard">HUBBARD</span></a>
-	<div class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</div></h2>
+	<span class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</span></h2>
 <hr />
 <br />
 
