--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 		<link rel="author" href="https://plus.google.com/105951994557667533128" />
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@bhubbard" />
-		<meta name="twitter:creator" content="@http://www.twitter.com/bhubbard" />
+		<meta name="twitter:creator" content="@bhubbard" />
 		<meta property='og:locale' content='en_us' />
 		<meta property='og:title' content='Brandon Hubbard | Los Angeles based Web Developer' />
 		<meta property='og:description' content='Meet Brandon Hubbard, Web Developer of imFORZA.' />
