--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="brandon hubbard, tech, media temple, imforza, mountain high, wordpress, coder" />
 		<meta name="author" content="Brandon Hubbard" />
 
-		<link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom Feed" />
+		<link rel="alternate" type="application/atom+xml" href="/feed/" title="BrandonHubbard.com" />
 
 		<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" /> 
 		<link rel="openid2.local_id" href="http://www.google.com/profiles/bkhubbard" /> 
@@ -16,7 +16,7 @@
 		
 		<link rel="author" href="https://plus.google.com/105951994557667533128" />
 		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@bhubbard" />
+		<meta name="twitter:site" content="@brandonhubbard" />
 		<meta name="twitter:creator" content="@bhubbard" />
 		<meta property='og:locale' content='en_us' />
 		<meta property='og:title' content='Brandon Hubbard | Los Angeles based Web Developer' />
