--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,12 +7,11 @@ html,body {
 	height:100%;
 }
 
-#wrap {
-		min-height:100%;
-	    height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
+section {
+min-height: 100%;
+height: auto !important;
+height: 100%;
+margin: 0 auto -4em;
 }
 
 
