--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@
 		<time datetime="{{ entry.date }}" id="top_time">{{ page.date | date: "%B %d, %Y" }}</time>
 	</header>
 	{{ content }}
+	
+	<br />
+	<strong><em>Enjoy this post? If so, please share!</em></strong> 
 </article>
 
 {% include footer.html %}
