--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,9 +1,8 @@
 {% include header.html %}
 
 <article class="post">
-	{{ content }}
+	{{ site.categories.projects }}
 </article>
 
-<img src="../files/mind-films.png" alt="mind-films" width="1882" height="1411" />
 
 {% include footer.html %}
