--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,9 +56,9 @@
 <div class="span8 offset2">
 
 <h2 class="brand" id="logo">
-			<a href="/"><img alt='' src="///www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86.png" class="avatar" height="100" width="100" />
+			<a href="/"><img alt='' src="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86.png" class="avatar" height="100" width="100" />
 	<span class="brandon">BRANDON</span><span class="hubbard">HUBBARD</span></a>
-	<span class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</span></h2>
+	<!-- <span class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</span> --></h2>
 <hr />
 <br />
 
