--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script>
 
-		<title>{% if page.title %} {{ page.title }} - {% endif %} BrandonHubbard.com</title>
+		<title>{% if page.title %} {{ page.title }} - {{ page.category }} - {% endif %} BrandonHubbard.com</title>
 	</head>
 
 <body>
@@ -59,8 +59,8 @@
 			<a href="/"><img alt='' src="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86.png" class="avatar" height="100" width="100" />
 	<span class="brandon">BRANDON</span><span class="hubbard">HUBBARD</span></a>
 	<!-- <span class="logo-page-title">//{% if page.title %} {{ page.title }} {% endif %}</span> --></h2>
+	
 <hr />
-<br />
 
 </div>
 </div><!-- end row -->
