--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,8 +1,20 @@
 {% include header.html %}
 
-<article class="post">
-	{{ site.categories.projects }}
-</article>
+
+
+<ul class="posts">
+	{% for post in site.categories.projects %}
+	<li>
+	<img src="{{ post.image }}" />
+		<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		{% if post.description %}
+	
+		<p>{{ post.description }}</p>
+		{% endif %}
+		<p class="post_date">{{ post.date | date: "%B %e, %Y" }}</p>
+	</li>
+	{% endfor %}
+</ul>
 
 
 {% include footer.html %}
