--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,7 +1,15 @@
 {% include header.html %}
 
+<div class="container">
+<div class="row">
+<div class="span8 offset2">
+
 <article class="post">
 	{{ content }}
 </article>
+
+</div>
+</div>
+</div>
 
 {% include footer.html %}
