--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,5 @@
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+
+</div> <!-- Close Wrap -->
 
 <footer class="footer">
     <div class="container">
@@ -32,7 +28,9 @@
 
 
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
-
+<script type="text/javascript" src="../assets/js/jquery.gridrotator.js"></script>
+<script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="../assets/js/custom.js"></script>
 
 	{% include analytics.html %}
 
