--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,19 @@
 {% include header.html %}
 
+
+<div class="container">
+<div class="row">
+<div class="span8 offset2">
+
 <article class="post">
 
 	<h2 class="page-header">{{ page.title }}</h2>
 
 	{{ content }}
 </article>
+
+</div>
+</div>
+</div>
 
 {% include footer.html %}
