--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,9 @@
 {% include header.html %}
 
+<div class="container">
+<div class="row">
+<div class="span8 offset2">
+
 <article class="post">
 	<header>
 		<h2 class="post-header">{{ page.title }}</h2>
@@ -8,7 +12,20 @@
 	{{ content }}
 	
 	<br />
+
 	<strong><em>Enjoy this post? If so, please share!</em></strong> 
+	<br />
+<!-- ShareThis Button BEGIN -->
+<span class='st_facebook_hcount' displayText='Facebook'></span>
+<span class='st_twitter_hcount' displayText='Tweet' st_via='bhubbard'></span>
+<span class='st_plusone_hcount' displayText='Google +1' style="width:20px !important;"></span>
+<span class='st_linkedin_hcount' displayText='LinkedIn' style="width:20px !important;"></span>
+<!-- ShareThis Button END -->
+
 </article>
+
+</div>
+</div>
+</div>
 
 {% include footer.html %}
