--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,7 +7,7 @@ html,body {
 	height:100%;
 }
 
-section {
+#wrap {
 min-height: 100%;
 height: auto !important;
 height: 100%;
@@ -22,23 +22,33 @@ body {
 	font:300 16px/26px Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+
+
 .brandon {
 	display:inline;
 	color:#000;
 	font-weight:300;
-	font-size:32px;
+	font-size:30px;
 }
 
 .hubbard {
 	display:inline;
 	color:#000;
 	font-weight:700;
-	font-size:32px;
+	font-size:30px;
 }
 
-h2#logo a {
+div.tagline {
+	text-align: left;
+	font-weight: 100;
+	color: #000;
+	font-size: 25px;
+}
+
+
+
+div#logo a {
 	color:#ddd;
-	text-align:center;
 	text-decoration:none;
 	font-size:26px;
 }
@@ -77,13 +87,19 @@ h1 a:hover,h1 a:focus, h2 a:hover,h2 a:focus {
 
 .avatar {
 	overflow:hidden;
-	margin:0;
-	margin-top:-10px;
-	width:40px;
-	height:40px;
+	margin:-12px 20px 20px 0;
+	width:80px;
+	height:80px;
 	-webkit-border-radius:50%;
 	-moz-border-radius:50%;
 	border-radius:50%;
+	display: inline-block;
+	float: left;
+}
+
+.brand {
+	clear: left;
+	display: inline-block;
 }
 
 .footer {
@@ -104,26 +120,6 @@ h1 a:hover,h1 a:focus, h2 a:hover,h2 a:focus {
 	text-decoration:none;
 }
 
-/* Breadcrumbs */
-.breadcrumb {
-	margin-top:-15px;
-	padding-top:0;
-	border-bottom:1px solid #eee;
-	background:none;
-}
-
-.breadcrumb span.divider {
-	margin:0 5px;
-	color:#ddd;
-}
-
-ul.breadcrumb {
-	padding-left:0;
-}
-
-span.breadcrumb_last {
-	color:#999;
-}
 
 
 
@@ -132,6 +128,8 @@ ul.posts {
 }
 ul.posts li {
 	list-style-type: none;
+	padding: 0 0 20px 0;
+	border-bottom: 1px solid #eee;
 }
 
 ul.posts li a {
@@ -141,6 +139,9 @@ ul.posts li a {
 p.post_date {
 	color: #ccc;
 }
+
+
+.navbar-inner, .nav {text-align: center;}
 
 
 
@@ -157,3 +158,18 @@ img.avatar {
 	height: 100px;
 }
  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
