--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,7 @@
 <div class="container">
 	<div class="row-fluid">
 		<div class="span8 offset2">
-			<div class="navbar">
+			<div class="navbar navbar-inverse">
 			<div class="navbar-inner">
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
