--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,6 +1,8 @@
 {% include header.html %}
 
-
+<div class="container">
+<div class="row">
+<div class="span8 offset2">
 
 <ul class="posts">
 	{% for post in site.categories.projects %}
@@ -16,5 +18,8 @@
 	{% endfor %}
 </ul>
 
+</div>
+</div>
+</div>
 
 {% include footer.html %}
