--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,16 +11,16 @@
 		<meta name="author" content="Brandon Hubbard" />
 
 		<link rel="alternate" type="application/atom+xml" href="/feed/" title="BrandonHubbard.com" />
+		<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
 		<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" /> 
 		<link rel="openid2.local_id" href="http://www.google.com/profiles/bkhubbard" /> 
-		
-		<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-		
 		<link rel="author" href="https://plus.google.com/105951994557667533128" />
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@brandonhubbard" />
-		<meta name="twitter:creator" content="@bhubbard" />
+		
+		<meta property="twitter:card" content="summary" />
+		<meta property="twitter:site" content="@brandonhubbard" />
+		<meta property="twitter:creator" content="@bhubbard" />
+		
 		<meta property='og:locale' content='en_us' />
 		<meta property='og:title' content='Brandon Hubbard | Los Angeles based Web Developer' />
 		<meta property='og:description' content='Meet Brandon Hubbard, Web Developer of imFORZA.' />
@@ -31,10 +31,9 @@
 
 		<link rel="shortcut icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
 		<link rel="apple-touch-icon" href="//www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
-		<meta name="msapplication-TileImage" content="http://www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
+		
+		<meta property="msapplication-TileImage" content="http://www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
 
-		
-		
 		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css"/>
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
