--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,7 @@
 		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
 		
 		<link href="/assets/css/custom.css" rel="stylesheet" />
+		<link href="/assets/css/adipoli.css" rel="stylesheet" />
 		
 		<!--[if lt IE 7]>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
@@ -58,8 +59,8 @@
 <div class="span8 offset2">
 
 <div id="logo">
-			<a href="/"><img alt='' src="//en.gravatar.com/userimage/6173818/4f8630a03b31d3b3d50e9be6d597bfca.png" class="avatar" height="100" width="100" />
-			<div class="brand"><span class="brandon">BRANDON</span><span class="hubbard">HUBBARD</span><div class="tagline">Web Design & Development</div></div></a>
+			<a href="/" class="brand"><img alt='' src="//en.gravatar.com/userimage/6173818/4f8630a03b31d3b3d50e9be6d597bfca.png" class="avatar" height="100" width="100" />
+			<div><span class="brandon">BRANDON</span><span class="hubbard">HUBBARD</span><div class="tagline">Web Design & Development</div></div></a>
 </div>
 	<br />
 </div>
