--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -4,19 +4,27 @@
 <div class="row">
 <div class="span8 offset2">
 
+<div class="latest-posts">
 <ul class="posts">
 	{% for post in site.categories.projects %}
-	<li>
-	<img src="{{ post.image }}" />
-		<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-		{% if post.description %}
 	
-		<p>{{ post.description }}</p>
-		{% endif %}
-		<p class="post_date">{{ post.date | date: "%B %e, %Y" }}</p>
-	</li>
+	<div class="row">
+	<div class="span5">
+	<h3 class="hp-preview"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		{{ post.img }}
+	</div>
+	
+	
+	<div class="span3">
+	<p class="post_date pull-right">{{ post.date | date: "%B %e, %Y" }}</p>
+	</div>
+	
+	</div>
+	
 	{% endfor %}
 </ul>
+</div>
+
 
 </div>
 </div>
