--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -11,12 +11,11 @@
 	<div class="row">
 	<div class="span5">
 	<h3 class="hp-preview"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-		{{ post.img }}
 	</div>
 	
 	
 	<div class="span3">
-	<p class="post_date pull-right">{{ post.date | date: "%B %e, %Y" }}</p>
+	<p class="post_date pull-right">{{ post.status }}</p>
 	</div>
 	
 	</div>
