update to font awesome and webmaster tools verify

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
 		<meta name="robots" content="index, follow" />
+		<meta name="google-site-verification" content="jVNDo4sJFlO_a8KDWUq65m3NqgglpF4-_JwQjm0r-Ao" />
 		
 		<meta name="description" content="{{ page.description }}" />
 		<meta name="keywords" content="{{ page.keywords }}" />
@@ -36,12 +37,12 @@
 
 		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css"/>
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet" />
-		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 		
 		<link href="/assets/css/custom.css" rel="stylesheet" />
 		
 		<!--[if lt IE 7]>
-		<link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome-ie7.css" rel="stylesheet">
 		<![endif]-->
 		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
