bunch of changes, main one being span12 for everything.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,17 +3,14 @@
 
 <footer class="footer">
     <div class="container">
-        <div class="row">
-            <div class="span8 offset2">
-                            </div>
-        </div>
+
   
   <div class="row">
-            <div class="span4 offset2 copyright">
+            <div class="span6 copyright">
                 <p class="pull-left">Copyright &copy; 2013 All rights reserved. <a href="/feed/">Subscribe via RSS</a> </p>
             </div>   
    
-            <div class="span4 pull-right social-icons">
+            <div class="span6 pull-right text-right social-icons">
 <a href="/sitemap.html"><i class="icon-sitemap"></i></a><a href="https://plus.google.com/u/0/105951994557667533128/posts"><i class="icon-google-plus"></i></a>
 <a href="https://www.facebook.com/bkhubbard" target="_blank"><i class="icon-facebook"></i></a>
 <a href="https://github.com/bhubbard" target="_blank"><i class="icon-github"></i></a>
@@ -27,8 +24,9 @@
 
 
 
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../assets/js/jquery.adipoli.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../assets/js/plugins.min.js"></script>
+<script type="text/javascript" src="../assets/js/jquery.adipoli.min.js"></script>
 <script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript" src="../assets/js/custom.js"></script>
 
