--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
 		<meta property="msapplication-TileImage" content="http://www.gravatar.com/avatar/3596404cbc9ffb7d4f48524e08340d86?s=16" />
 
 		<link href="//fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic" rel="stylesheet" type="text/css"/>
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 		
 		<link href="/assets/css/custom.css" rel="stylesheet" />
@@ -45,7 +45,7 @@
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome-ie7.css" rel="stylesheet">
 		<![endif]-->
 		
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script>
 
 		<title>{% if page.title %} {{ page.title }} - {% endif %} BrandonHubbard.com</title>
@@ -56,7 +56,7 @@
 <header>
 <div class="container">
 <div class="row-fluid">
-<div class="span8 offset2">
+<div class="span12">
 
 <div id="logo">
 			<a href="/" class="brand"><img alt='' src="//en.gravatar.com/userimage/6173818/4f8630a03b31d3b3d50e9be6d597bfca.png" class="avatar" height="100" width="100" />
@@ -71,7 +71,7 @@
 <nav>
 <div class="container">
 	<div class="row-fluid">
-		<div class="span8 offset2">
+		<div class="span12">
 			<div class="navbar navbar-inverse">
 			<div class="navbar-inner">
 				<ul class="nav">
