--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 <div class="row">
-<div class="span8 offset2">
+<div class="span12">
 
 <article class="post">
 	{{ content }}
