--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,11 @@
 
 <div class="container">
 <div class="row">
-<div class="span8 offset2">
+	
+
+	
+	
+<div class="span12">
 
 <article class="post">
 	<header>
