--- a/_layouts/project_entry.html
+++ b/_layouts/project_entry.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 <div class="row">
-<div class="span8 offset2">
+<div class="span12">
 
 <h2 class="content">{{page.title}}</h2>
  <a href="{{ post.url }}">
