--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,30 +2,30 @@
 
 <div class="container">
 <div class="row">
-<div class="span8 offset2">
+
 
 <div class="latest-posts">
 <ul class="posts">
 	{% for post in site.categories.projects %}
 	
-	<div class="row">
-	<div class="span5">
+
+	<div class="span9">
 	<h3 class="hp-preview"><a href="{{ post.url }}">{{ post.title }}</a></h3>
 	</div>
 	
 	
 	<div class="span3">
-	<p class="post_date pull-right">{{ post.status }}</p>
+	<p class="post_date text-right pull-right">{{ post.status }}</p>
 	</div>
 	
-	</div>
+
 	
 	{% endfor %}
 </ul>
 </div>
 
 
-</div>
+
 </div>
 </div>
 
