switched to addths

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,13 +10,18 @@
                 <p class="pull-left">Copyright &copy; 2013 All rights reserved. <a href="/feed/">Subscribe via RSS</a> </p>
             </div>   
    
-            <div class="span6 pull-right text-right social-icons">
-<a href="/sitemap.html"><i class="icon-sitemap"></i></a><a href="https://plus.google.com/u/0/105951994557667533128/posts"><i class="icon-google-plus"></i></a>
-<a href="https://www.facebook.com/bkhubbard" target="_blank"><i class="icon-facebook"></i></a>
-<a href="https://github.com/bhubbard" target="_blank"><i class="icon-github"></i></a>
-<a href="https://twitter.com/bhubbard" target="_blank"><i class="icon-twitter"></i></a>
-<a href="https://www.linkedin.com/in/brandonhubbard" target="_blank"><i class="icon-linkedin"></i></a>
+<div class="span6 pull-right text-right social-icons">
+    <a href="/sitemap.html" title="Sitemap"><i class="icon-sitemap"></i></a>
+    <a class="addthis_button_google_follow" addthis:userid="105951994557667533128/posts"><span><i class="icon-google-plus"></i></span></a>
+    <a class="addthis_button_facebook_follow" addthis:userid="bkhubbard"><span><i class="icon-facebook"></i></span></a>
+    <a class="addthis_button_twitter_follow" addthis:userid="bhubbard"><span><i class="icon-twitter"></i></span></a>
+    <a class="addthis_button_linkedin_follow" addthis:userid="brandonhubbard"><span><i class="icon-linkedin"></i></span></a>
+    <a href="https://github.com/bhubbard" title="Github" target="_blank"><i class="icon-github"></i></a>
+    <a class="addthis_button_pinterest_follow" addthis:userid="bkhubbard"><span><i class="icon-pinterest"></i></span></a>
 </div>    
+
+
+
             
         </div>
     </div>
@@ -24,10 +29,12 @@
 
 
 
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="../assets/js/plugins.min.js"></script>
 <script type="text/javascript" src="../assets/js/jquery.adipoli.min.js"></script>
 <script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f27543758fc3260"></script>
+
 <script type="text/javascript" src="../assets/js/custom.js"></script>
 
 	{% include analytics.html %}
