--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,22 @@
 
 
 
+<!-- AddThis Trending Content BEGIN -->
+<div id="addthis_trendingcontent"></div>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f27543758fc3260"></script>
+<script type="text/javascript">
+addthis.box("#addthis_trendingcontent", {
+	feed_title : "",
+	feed_type : "shared",
+	feed_period : "month",
+	num_links : 5,
+	height : "auto",
+	width : "auto"});
+</script>
+<!-- AddThis Trending Content END -->
+
+
+
 </div>	
 	
 <div class="span8">
