Working on switching to the new hyde theme.

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -2,27 +2,20 @@
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-3139470-4']);
 _gaq.push(['_trackPageview'],['_trackPagespeed']);
-	
+
 (function() {
 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
-</script>	
-<script type="text/javascript">
-  var GoSquared = {};
-  GoSquared.acct = "GSN-459837-K";
-  (function(w){
-    function gs(){
-      w._gstc_lt = +new Date;
-      var d = document, g = d.createElement("script");
-      g.type = "text/javascript";
-      g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
-      var s = d.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(g, s);
-    }
-    w.addEventListener ?
-      w.addEventListener("load", gs, false) :
-      w.attachEvent("onload", gs);
-  })(window);
+</script>
+
+<script type="text/javascript">var GoSquared={};GoSquared.acct="GSN-459837-K";(function(w){function gs(){w._gstc_lt=+new Date;var d=document,g=d.createElement("script");g.type="text/javascript";g.src="//d1l6p2sc9645hc.cloudfront.net/tracker.js";var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(g,s)}w.addEventListener?w.addEventListener("load",gs,false):w.attachEvent("onload",gs)})(window);</script>
+
+
+<script>
+// Universal Analytics
+ // ga('set', 'metric1', <?php echo nt_ga_word_count(); ?>);
+ // ga('set', 'metric2', <?php echo nt_ga_post_age(); ?>);
+//  ga('set', 'metric3', <?php echo nt_ga_comment_count(); ?>);
 </script>
