--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,19 +1,8 @@
-{% include header.html %}
+---
+layout: default
+---
 
-
-<div class="container">
-<div class="row">
-<div class="span12">
-
-<article class="post">
-
-	<h2 class="page-header">{{ page.title }}</h2>
-
-	{{ content }}
-</article>
-
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
 </div>
-</div>
-</div>
-
-{% include footer.html %}
