--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,3 +6,7 @@ layout: default
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
+
+
+{% include analytics.html %}
+{% include addthis.html %}
