--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,7 +11,7 @@
 	  <div class="col-md-12">
     <h1>{{ page.title }}</h1>
     <h2>{{ page.subtitle }}</h2>
-{{ page.content | number_of_words }} Words
+
 
       {{ content }}
 
@@ -30,18 +30,19 @@
     </div>
     </div>
 
+
+
+
 	  <div class="comments">
 	  <div class="container">
 	  <div class="row">
 	   <div class="col-md-12">
-	  <h2>Comments</h2>
-	  <noscript>To view comments you must have javascript turned on.</noscript>
-      <div id="disqus_thread"></div>
+	  <h2>Like this project?</h2>
+
 	   </div>
 	  </div>
 	  </div>
 	  </div>
-
 
 
 {% include footer.html %}
