--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -11,7 +11,7 @@
 	  <div class="col-md-12">
     <h1>{{ page.title }}</h1>
     <h2>{{ page.subtitle }}</h2>
-{{ page.content | number_of_words }} Words
+
 
       {{ content }}
 
@@ -30,18 +30,26 @@
     </div>
     </div>
 
+
+<div data-repo="jquery-boilerplate/boilerplate"></div>
+
 	  <div class="comments">
 	  <div class="container">
 	  <div class="row">
 	   <div class="col-md-12">
-	  <h2>Comments</h2>
-	  <noscript>To view comments you must have javascript turned on.</noscript>
-      <div id="disqus_thread"></div>
+	  <h2>Open Source Projects</h2>
+	  <div id="opensource"></div>
+
+	  <div id="codebadges"></div>
 	   </div>
 	  </div>
 	  </div>
 	  </div>
 
 
-
+<script src="{{ site.url }}/assets/js/jquery-proudify.min.js"></script>
+<script type="text/javascript">
+jQuery('#opensource').proudify({'username':'bhubbard'});
+jQuery('#codebadges').proudify({'username':'bhubbard', 'service':'coderwall'});
+</script>
 {% include footer.html %}
