--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -1,359 +1,190 @@
+@import 'bootstrap-overrides';
+@import 'animate';
+@import 'proudify';
 
 
-/* Body resets
--------------------------------------------------- */
 
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
 
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
 
-body {
-  font:300 16px/26px Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #454441;
-  background-color: #fff;
-}
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 10px;
-  font-weight: 500;
-  line-height: 1.25;
-  text-rendering: optimizeLegibility;
-}
-h1 {
-  font-size: 40px;
-}
-h2 {
-  margin-top: 20px;
-  font-size: 32px;
-}
-h3 {
-  margin-top: 24px;
-  font-size: 24px;
-}
-h4, h5, h6 {
-  margin-top: 16px;
-  font-size: 16px;
-}
-
-p {
-  margin: 0 0 15px;
-}
-
-ul, ol {
-  padding: 0;
-  margin: 0 0 15px;
-}
-li {
-  color: #888580;
-}
-
-hr {
-  position: relative;
-  margin: 40px 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
-}
-
-strong {
-  color: #222;
-}
-
-abbr {
-  background-color: #eee;
-  display: inline-block;
-  padding: 3px;
-  font-size: 13px;
-  font-weight: bold;
-  color: #555;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
-  text-transform: uppercase;
-  border-radius: 3px;
-}
-
-code, pre {
-  padding: 0 3px 2px;
-  font-family: Menlo, Monaco, "Courier New", monospace;
-  font-size: 14px;
-  border-radius: 3px;
-}
-code {
-  padding: 2px 4px;
-  color: #d14;
-  background-color: #f7f7f9;
-  border: 1px solid #e1e1e8;
-}
-
-pre {
-  display: block;
-  margin: 0 0 14px;
-  padding: 15px 20px;
-  line-height: 28px;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #eee;
-}
-pre code {
-  padding: 0;
-  color: inherit;
-  background-color: transparent;
-  border: 0;
-}
-.highlight {
-  margin-bottom: 15px;
-  padding: 15px;
-  border-radius: 5px;
-}
-.highlight pre {
-  margin-bottom: 0;
-}
-
-/* Quotes */
-blockquote {
-  padding: 0 0 0 20px;
-  margin: 15px 30px 15px 0;
-  border-left: 5px solid #eee;
-}
-blockquote p {
-  margin-bottom: 0;
-  color: #7a7a7a;
-  text-indent: -0.4em;
-}
-blockquote p:before {
-  content: '\201C';
-}
-blockquote p:after {
-  content: '\201D';
-}
-
-img {
-  display: block;
-  margin: 0 0 15px;
-  border-radius: 5px;
+.body {
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 
-/* Links
--------------------------------------------------- */
-
-a {
-  font-weight: 600;
-  color: #222;
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
+/* Add This Custom CSS */
+.atss {
+	top: 40% !important;
 }
 
 
-/* Scaffolding
--------------------------------------------------- */
-
-/* Header */
-.masthead {
-  color: #fff;
-  background-color: #2a2a2a;
+.main-menu {
+		background: #282b2d;
+	color: #fff;
+	padding: 5px 0;
 }
-.masthead-inner {
-  padding: 20px;
+.main-menu a {
+	color: #fff;
 }
-.masthead a {
-  color: #fff;
-}
-
-/* Footer area of masthead */
-.colophon {
-  margin-top: 20px;
-  color: #7a7a7a;
-}
-.colophon-links {
-  margin: 0 0 15px;
-  list-style: none;
+.main-menu .nav-pills a:hover {
+	background: none;
+	color: #428bca;
 }
 
 
-/* Posts
--------------------------------------------------- */
-
-/* Wrapper for all posts on homepage */
-.posts {
-  margin-left:  20px;
-  margin-right: 20px;
-}
-
-/* Single post */
-.post {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-.post-date {
-  display: block;
-  margin: -10px 0 10px;
-  color: #9a9a9a;
-}
-
-
-/* Pagination
--------------------------------------------------- */
-
-.pagination {
-  overflow: hidden; /* clearfix */
-  margin-top: 40px;
-  font-weight: bold;
-  color: #ccc;
-  text-align: center;
-  border-top: 1px solid #eee;
-}
-.pagination a,
-.pagination span {
-  float: left;
-  width: 50%;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 20px;
-}
-.pagination a:first-child,
-.pagination span:first-child {
-  border-right: 1px solid #eee;
-}
-.pagination a:hover {
-  text-decoration: none;
-  background-color: #f5f5f5;
-}
-
-
-/* Responsive
--------------------------------------------------- */
-
-@media (min-width: 768px) {
-  .masthead-inner {
-    padding: 40px;
-  }
-  .posts {
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-}
-
-@media (min-width: 990px) {
-
-  body {
-    font-size: 18px;
-  }
-  .masthead h1 {
-    font-size: 64px;
-  }
-
-  /* Center container in available real estate */
-  .container {
-    margin-left: 35%;
-    margin-right: 10%;
-    width: 55%;
-  }
-
-  /* Fix the masthead to the side for impact and awesomeness */
-  .masthead {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 25%;
-    margin-bottom: 0;
-  }
-  .masthead-inner {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-  }
-  .masthead .lead {
-    font-size: 24px;
-  }
-  .colophon {
-    margin-top: 40px;
-  }
-
-  /* Remove mobile device padding from list of posts */
-  .posts {
-    margin-left: 0;
-    margin-right: 0;
-  }
-  /* Increase space between posts */
-  .post {
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-
-  /* Make pagination stand alone */
-  .pagination {
-    margin-bottom: 60px;
-    border: 1px solid #eee;
-  }
+.intro {
+	text-align: justify;
+	font-size: 14px;
 
 }
+.intro a {
+	color: #282b2d;
+	font-weight: bold;
 
-
-
-
-
-
+}
 
 
 /* Logo Stuff */
 .brandon {
 	display:inline;
-	color:#fff;
+	color: #282b2d;
 	font-weight:300;
 	font-size:30px;
 }
 
 .hubbard {
 	display:inline;
-	color:#fff;
+	color: #282b2d;
 	font-weight:700;
 	font-size:30px;
 }
 
-div.tagline {
-	text-align: left;
-	font-weight: 100;
+.tagline {
+	color: #9c9c9c;
+}
+
+
+
+
+
+
+
+h1, h2, h3, h4, h5, h6 {
+	line-height: 1.1;
+
+
+}
+
+
+.content {
+	min-height: 700px;
+}
+
+.content h1 {
+	font-size: 50px;
+	line-height: 1.1;
+	letter-spacing: -0.04em;
+}
+.content h2 {
+	letter-spacing: 0.01em;
+font-weight: 100;
+font-style: normal;
+line-height: 1.1;
+color: #999;
+margin: 0 0 3.75rem 0;
+}
+
+.content p {
+	margin-bottom: 30px;
+	letter-spacing: .01rem;
+	font-weight: 200;
+	font-style: normal;
+	font-size: 22px;
+	line-height: 1.5;
+}
+
+
+
+h1 {
+	font-weight: bold;
+}
+
+
+
+.footer {
+	margin-bottom: 50px;
+	padding-top: 20px;
+}
+
+
+.comments {
+	background: #282b2d;
 	color: #fff;
-	font-size: 25px;
+	padding: 20px 0;
 }
-div#logo a {
-	color:#fff;
-	text-decoration:none;
-	font-size:26px;
-}
-.avatar {
-	overflow:hidden;
-	margin:-12px 20px 20px 0;
-	width:80px;
-	height:80px;
-	-webkit-border-radius:50%;
-	-moz-border-radius:50%;
-	border-radius:50%;
-	display: inline-block;
-	float: left;
+.comments h2 {
+	text-transform: uppercase;
 }
 
 
-.post img {
-	max-width: 100% !important;
+.content {
+	padding: 2em 0;
+	margin: 2em 0;
 }
+
+
+
+
+
+.back-to-top {
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
+    text-decoration: none;
+    color: #fff;
+    background-color: #282b2d;
+    font-size: 12px;
+    padding: 1em;
+    display: none;
+}
+
+.back-to-top:hover {
+    background-color: rgba(135, 135, 135, 0.50);
+    color: #fff;
+    text-decoration: none;
+}
+
+
+
+ul.recent-posts {
+	margin: 0;
+	padding: 0;
+}
+.recent-posts li:first-child {
+	margin-top: 0;
+	padding-top: 0;
+}
+
+.recent-posts li {
+	margin: 10px 0;
+	padding: 5px 0;
+	list-style-type: none;
+}
+
+.recent-posts li:hover {
+
+}
+
+.recent-posts li .post-title {
+	display:inline;
+	color: #282b2d;
+}
+
+.recent-posts li .post-date {
+	display:inline;float:right;text-align:right;
+	color: #999999;
+}
+
 
 
 
@@ -370,7 +201,11 @@ div#logo a {
 
 
 /* Large desktop */
-@media (min-width: 1200px) {  }
+@media (min-width: 1200px) {
+
+.post, .content {min-height: 500px;}
+
+ }
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {  }
@@ -378,22 +213,8 @@ div#logo a {
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
 
-.content, .masthead-inner, .post {margin: 0 20px;}
-.post {margin-top: 30px;}
-.masthead-inner {padding: 50px 0;}
+body {padding-bottom: 50px;}
  }
 
 /* Landscape phones and down */
-@media (max-width: 480px) {
-
-
-.masthead-inner {
-	text-align: center !important;
-}
-
-.avatar{
-	margin-left: 35%;
-
-}
-
-}
+@media (max-width: 480px) { }
