Footer Image Size Fix.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 <div class="footer container text-center">
-      <img class="madein" src="{{ site.baseurl }}../../assets/img/made-in-ca.png" alt="Made in California" width="80" style="margin-top:20px;">
+      <img class="madein" src="{{ site.baseurl }}../../assets/img/made-in-ca-small.png" alt="Made in California" height="48"  width="80" style="margin-top:20px;">
 </div>
 
 </footer>
